--- a/gpti/src/App.css
+++ b/gpti/src/App.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;900&display=swap');
 
 * {
-  margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
@@ -27,14 +26,20 @@ body,
   --font-weight-bold: 900;
   --font-weight-regular: 400;
   background-color: white;
-  padding: 15px;
 }
 
 .app {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr 800px 1fr;
-  grid-template-rows: 1fr 600px 1fr;
-  background-color: #f3f4f6;
+  grid-template-rows: auto;
+  background-color: var(--light-yellow);
+}
+
+.view-title{
+  font-family: var(--font-family);
+  font-size: 2rem;
+  font-weight: var(--font-weight-bold);
+  text-align: center;
 }
