--- a/gpti/src/Steps/Sport/Sport.css
+++ b/gpti/src/Steps/Sport/Sport.css
@@ -1,30 +1,42 @@
 /* Estilos para el paso de selección de deporte */
-.step-content {
-  margin: 0 auto;
-  max-width: 450px;
+.sports-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  row-gap: 3rem;
+  justify-items: center;
 }
 
-.view-title {
-  font-size: 24px;
-  margin-bottom: 16px;
-  color: #333;
+.sport-option {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background-color: #d1d1d1;
+  color: black;
+  font-weight: var(--font-weight-bold);
+  font-family: var(--font-family);
   text-align: center;
+  padding: 0.5rem;
+  cursor: pointer;
+  transition: transform 0.3s, border 0.3s;
+  border: 3px solid transparent;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.form-group {
-  margin-bottom: 24px;
+.sport-option img {
+  width: 75px;
+  object-fit: fill;
 }
 
-.form-control {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-  transition: border-color 0.3s;
+.sport-option p {
+  margin: 0;
+  font-size: 0.9rem;
 }
 
-.form-control:focus {
-  border-color: #4a90e2;
-  outline: none;
+.sport-option:hover, .sport-option.selected {
+  border-color: var(--yellow);
+  transform: scale(1.1);
 }
