--- a/gpti/src/Steps/Start/Start.css
+++ b/gpti/src/Steps/Start/Start.css
@@ -3,7 +3,7 @@
   position: relative;
   height: 85vh;
   width: 100%;
-  background-image: url('../../assets/FoodImgs/matcha.jpeg');
+  background-image: url('../../assets/FoodImgs/gym.jpeg');
   background-size: cover;
   background-position: center;
   display: flex;
@@ -27,7 +27,7 @@
 
 .brand {
   font-size: 2.5rem;
-  font-weight: bold;
+  font-weight: var(--font-weight-bold);
   margin: 0.5rem 0;
 }
 
@@ -37,7 +37,7 @@
 }
 
 .start-button {
-  background-color: #7b61ff;
+  background-color: var(--yellow);
   color: white;
   border: none;
   padding: 12px 30px;
@@ -48,5 +48,5 @@
 }
 
 .start-button:hover {
-  background-color: #5a45d0;
+  background-color: var(--yellow-2);
 }
