--- a/gpti/src/App.css
+++ b/gpti/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;900;600&display=swap');
 
 * {
   padding: 0;
@@ -25,6 +25,7 @@ body,
   --font-family: 'DM Sans', sans-serif;
   --font-weight-bold: 900;
   --font-weight-regular: 400;
+  --font-weight-semi-bold: 600;
   background-color: white;
 }
 
