--- a/gpti/src/Steps/Meals/Meals.css
+++ b/gpti/src/Steps/Meals/Meals.css
@@ -4,9 +4,9 @@
 
 .meals-section h3 {
   font-size: var(--body1);
-  font-weight: 500;
+  font-weight: 600;
   color: var(--text-primary);
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   text-align: center;
 }
 
@@ -15,7 +15,6 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 1.5rem;
-  padding: 1rem;
   width: 100%;
 }
 
@@ -23,7 +22,6 @@
   background: #fff;
   border-radius: 24px;
   box-shadow: 0 2px 8px rgba(60, 64, 67, 0.12);
-  width: 100px;
   height: fit-content;
   display: flex;
   flex-direction: column;
@@ -35,6 +33,7 @@
   outline: none;
   position: relative;
   border: 2px solid transparent;
+  width: fit-content;
 }
 
 .meal-card:hover {
@@ -51,17 +50,17 @@
 
 .meal-name-container {
   width: 100%;
-  height: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
+  padding: 1rem 3rem;
 }
 
 .meal-name {
   font-family: var(--font-family);
-  font-size: 2.25rem;
-  font-weight: 700;
+  font-size: 20px;
+  font-weight: 900;
   color: #222;
   text-align: center;
 }
