--- a/gpti/src/Steps/Weight/Weight.css
+++ b/gpti/src/Steps/Weight/Weight.css
@@ -3,14 +3,13 @@
   background: #fff;
   border-radius: 24px;
   box-shadow: 0 2px 8px rgba(60, 64, 67, 0.12);
-  min-height: 100px;
+  min-height: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
   cursor: pointer;
   transition: box-shadow 0.3s ease, transform 0.2s ease;
   user-select: none;
-  padding-bottom: 1rem;
   outline: none;
   position: relative;
   border: 2px solid transparent;
@@ -31,19 +30,20 @@
 .peso-value-container {
   width: 100%;
   height: fit-content;
-  padding: 1rem 1rem;
+  padding: 1rem 1rem 1rem 1rem;
   border-top-left-radius: 24px;
   border-top-right-radius: 24px;
   display: flex;
   align-items: flex-end;
-  justify-content: space-between;
-  position: relative;;
+  /* justify-content: space-between; */
+  position: relative;
+  
 }
 
 .peso-value {
   font-family: var(--font-family);
-  font-size: 2.5rem;
-  font-weight: 700;
+  font-size: 24px;
+  font-weight: 900;
   color: #222;
 }
 
@@ -61,38 +61,27 @@
 
 .peso-unit {
   font-family: var(--font-family);
-  font-size: 1rem;
+  font-size: 12px;
   font-weight: 700;
   color: #222;
-  padding-bottom: 0.35em;
+  padding: 0em 0em 0em 0.5em;
 }
 
 .peso-card-content {
   width: 100%;
-  padding: 0rem 1rem;
+  padding: 0rem 0rem 1rem 1rem;
   display: flex;
   flex-direction: column;
   justify-content:space-between;
   align-items: center;
 }
 
-.peso-title {
-  font-family: var(--font-family);
-  font-size: 1.15rem;
-  font-weight: 700;
-  color: #222;
-  text-align: center;
-  line-height: 1.2;
-  margin: 0;
-  width: 100%;
-}
-
 .peso-desc {
   font-family: var(--font-family);
-  font-size: 0.875rem;
-  color: #666;
-  font-weight: 400;
-  line-height: 1.2;
+  font-size: 12px;
+  color: #656565;
+  font-weight: 900;
+  line-height: 16px;
   text-align: left;
   width: 100%;
 }
