user options and form updates

--- a/gpti/src/App.css
+++ b/gpti/src/App.css
@@ -57,8 +57,8 @@ body,
   width: 100%;
   min-height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 800px 1fr;
+  grid-template-columns: 1fr auto 1fr;
   grid-template-rows: auto;
   background-color: var(--light-yellow);
+  align-content: center;
 }
-
